# gl-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: attribution.txt  scene.mtl  sus.mtl
shaders/: default.frag  default.vert
src/: camera.cc  camera.h  lights.h  main.cc  material.h  mesh.cc  mesh.h  model.cc  model.h  obj_loader.cc  obj_loader.h  program.cc  program.h  shader.cc  shader.h
src/shaders/: default.frag  simple.frag  simple.vert
